# spacefighter_SFML

./: CMakeLists.txt  game.cpp  game.hpp  main  main.cpp
src/: CMakeLists.txt  game.cpp
test/: CMakeLists.txt  gameTest.cpp
